Fixed the horizontal scroll

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -7,5 +7,6 @@ header {
 	background-image: url("../images/logo.png");
 	background-position: left center;
 	margin-left: 20px;
+	max-width:1444px;
 	background-repeat: no-repeat;
 }
